Adding Lifespan.End to ResourceClaim status
