# spec/openapi.yaml
@@ -280,11 +280,15 @@ components:
         state:
           type: string
           example: "stopped"
+        lifespanEnd:
+          type: string
+          example: "2023-08-15T01:23:45Z"
       required:
         - GUID
         - runtimeDefault
         - runtimeMaximum
         - state
+        - lifespanEnd
     Status:
       type: object
       properties:
